blog detail view url and template

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -3,7 +3,7 @@
 {% block content %}
   {% for blog in object_list %}
     <div class="blog-entry">
-      <h2><a href="">{{ blog.title }}</a></h2>
+      <h2><a href="{% url 'blog_detail' blog.pk %}">{{ blog.title }}</a></h2>
       <h3><a href="">{{ blog.author }}</a></h3>
       <h3>{{ blog.date }}</h3>
     </div>
