--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <h1>Digital Media</h1>
+    <h1><a href="{% url 'home' %}">Digital Media</a></h1>
     <h1><a href="{% url 'blog' %}">See what we've been up to!</a></h1>
   </header>
   <div>
