edit blog posts

--- a/templates/blog_detail.html
+++ b/templates/blog_detail.html
@@ -7,4 +7,5 @@
     <h4>{{ blog.date }}</h4>
     <p>{{ blog.body }}</p>
   </div>
+  <a href="{% url 'blog_edit' blog.pk %}">+ Edit Blog Post</a>
 {% endblock content %}
