--- a/static/css/base.css
+++ b/static/css/base.css
@@ -31,24 +31,24 @@ header h1 a {
   margin-bottom: 2.5rem
 }
 
-.post-entry {
+.blog-entry {
   margin-bottom: 2rem;
 }
 
-.post-entry h2 {
+.blog-entry h2 {
   margin: 0.5rem 0;
 }
 
-.post-entry h2 a, .post-entry h2 a:visited {
+.blog-entry h2 a, .blog-entry h2 a:visited {
   color: blue;
   text-decoration: none;
 }
 
-.post-entry p {
+.blog-entry p {
   margin: 0;
   font-weight: 400;
 }
 
-.post-entry h2 a:hover {
+.blog-entry h2 a:hover {
   color: red;
 }
