--- a/templates/post_new.html
+++ b/templates/post_new.html
@@ -1,9 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>New post</h1>
+<fieldset class="uk-fieldset">
+
+  <legend class="uk-legend">New Post</legend>
+
   <form action="" method="post">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Save" />
   </form>
+
+</fieldset>
 {% endblock content %}
