--- a/templates/blog_detail.html
+++ b/templates/blog_detail.html
@@ -1,12 +1,15 @@
 {% extends 'base.html' %}
-
 {% block content %}
-  <div class="blog-entry">
-    <h1>{{ blog.title }}</h1>
-    <h4>{{ blog.author }}</h4>
-    <h4>{{ blog.date }}</h4>
-    <p>{{ blog.body }}</p>
-  </div>
-  <a href="{% url 'blog_edit' blog.pk %}">+ Edit Blog Post</a>
-  <a href="{% url 'blog_delete' blog.pk %}">+ Delete Blog Post</a>
+<div class="container uk-padding">
+	<ul class="uk-iconnav">
+	    <li><a href="{% url 'post_new' %}" uk-icon="icon: plus"></a></li>
+	    <li><a href="{% url 'blog_edit' blog.pk %}" uk-icon="icon: file-edit"></a></li>
+	    <li><a href="{% url 'blog_delete' blog.pk %}" uk-icon="icon: trash"></a></li>
+	</ul>
+    <article class="uk-article">
+        <h1 class="uk-article-title">{{ blog.title }}</h1>
+        <p class="uk-article-meta">Written by <a href="#">{{ blog.author }}</a> on {{ blog.date }}.</p>
+        <p>{{ blog.body }}</p>
+    </article>
+</div>
 {% endblock content %}
