--- a/templates/index.html
+++ b/templates/index.html
@@ -15,11 +15,11 @@
     <body>
     	<div class="container uk-padding">
     		<div class="wrapper">
-			<a href="{% url 'home' %}"><img src="img/logo.png"></a>
+			<a href="{% url 'blog' %}"><img src="{% static 'img/logo.png' %}"></a>
 			</div>
 		</div>
 		<div id="title" class="title">
-			<a href="{% url 'home' %}" style="text-decoration: none;"><h1 class="animated fadeIn">Explore</h1></a>
+			<a href="{% url 'blog' %}" style="text-decoration: none;"><h1 class="animated fadeIn">Explore</h1></a>
 			<a href="" style="text-decoration: none;"><h1 class="animated fadeIn delay-1s">Experience</h1></a>
 			<a href="" style="text-decoration: none;"><h1 class="animated fadeIn delay-2s">Enlighten</h1></a>
 		</div>
