--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+
+
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -25,13 +27,14 @@
     <div class="uk-navbar-center">
     <div class="uk-navbar-center-left"><div>
         <ul class="uk-navbar-nav">
-          <li><a href="{% url 'home' %}">Homepage</a></li>
-          <li><a href="{% url 'blog' %}">Blog</a></li>
+          <li><a href="{% url 'blog' %}">Homepage</a></li>
+          <li><a href="{% url 'students' %}">Students</a></li>
+          <li><a href="{% url 'blog_list' %}">Blog</a></li>
         </ul>
     </div>
     </div>
     <div>
-    <a class="uk-navbar-item uk-logo" href="#">
+    <a class="uk-navbar-item uk-logo" href="{% url 'blog_list' %}">
       <img src="{% static 'img/logo.png' %}" height="50" width="50">
     </a>
     <div class="uk-navbar-center-right"><div>
@@ -44,14 +47,25 @@
           <li><a href="#">Map</a></li>
           <li><a href="#">About</a></li>
         </ul>
-    </div>
+        </div>
+        {% if user.is_authenticated %}
+        <li><a href="#">{{ user.firstname }}</a>
+        <div class="uk-navbar-dropdown">
+        <ul class="uk-nav uk-navbar-dropdown-nav">
+          <li><a href="{% url 'blog_new' %}">New Blog Post</a></li>
+          <li><a href="{% url 'password_change' %}">Change password</a></li>
+          <li><a href="{% url 'logout' %}">Log Out</a></li>
+        </ul>
+        </div>
+        {% else %}
+        <li><a href="{% url 'signup' %}">Sign Up</a></li>
+        {% endif %}
         </li>
         </ul>
         </div>
     </div>
     </nav>
   </div>
-  
   <section>
     <div class="container">
     {% block content %}
