--- a/templates/blog_new.html
+++ b/templates/blog_new.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 <body style="height: 100vh;">
-  <h1>Edit post</h1>
+  <h1>New post</h1>
   <form action="" method="post">{% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Update" />
+    <input type="submit" value="Save" />
   </form>
 </body>
 {% endblock content %}
