--- a/templates/index.html
+++ b/templates/index.html
@@ -8,18 +8,18 @@
 
 	<link rel="stylesheet" href="{% static 'css/uikit.min.css' %}" />
 	<link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">
-	
+
 	<link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
     <body>
-    	<div class="container uk-padding">
+    	<div class="container uk-padding" style="padding-bottom: 20px;">
     		<div class="wrapper">
-			<a href="{% url 'blog' %}"><img src="{% static 'img/logo.png' %}"></a>
+			<a href="{% url 'blog_list' %}"><img src="../static/img/logo.png"></a>
 			</div>
 		</div>
 		<div id="title" class="title">
-			<a href="{% url 'blog' %}" style="text-decoration: none;"><h1 class="animated fadeIn">Explore</h1></a>
+			<a href="{% url 'blog_list' %}" style="text-decoration: none;"><h1 class="animated fadeIn">Explore</h1></a>
 			<a href="" style="text-decoration: none;"><h1 class="animated fadeIn delay-1s">Experience</h1></a>
 			<a href="" style="text-decoration: none;"><h1 class="animated fadeIn delay-2s">Enlighten</h1></a>
 		</div>
