--- a/templates/index.html
+++ b/templates/index.html
@@ -1,29 +1,47 @@
 {% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Homepge</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1">
+<title>untitled document</title>
+<link rel="stylesheet" href="screen.css" media="screen">
+<link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+<link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">
 
-	<link rel="stylesheet" href="{% static 'css/uikit.min.css' %}" />
-	<link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">
+</head>
+<body> 
+ <div id="header" class="grow">
+  <img  src="../static/img/logo.png" width="412" height="82" alt="logo">
+  <div id="title" class="title">
+      <a href="{% url 'blog_list' %}" style="text-decoration: none;"><h1 class="animated fadeIn">Explore</h1></a>
+      <a href="" style="text-decoration: none;"><h1 class="animated fadeIn delay-1s">Experience</h1></a>
+      <a href="" style="text-decoration: none;"><h1 class="animated fadeIn delay-2s">Enlighten</h1></a>
+  </div>
+ </div>
+ <div>
 
-	<link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+ </div>
 
-    <body>
-    	<div class="container uk-padding" style="padding-bottom: 20px;">
-    		<div class="wrapper">
-			<a href="{% url 'blog_list' %}"><img src="../static/img/logo.png"></a>
-			</div>
-		</div>
-		<div id="title" class="title">
-			<a href="{% url 'blog_list' %}" style="text-decoration: none;"><h1 class="animated fadeIn">Explore</h1></a>
-			<a href="" style="text-decoration: none;"><h1 class="animated fadeIn delay-1s">Experience</h1></a>
-			<a href="" style="text-decoration: none;"><h1 class="animated fadeIn delay-2s">Enlighten</h1></a>
-		</div>
-		<script src="js/uikit.min.js"></script>
-        <script src="js/uikit-icons.min.js"></script>
-    </body>
+
+<script>
+(function() {
+   'use strict';
+   var he = document.getElementById('header');
+   var startShrink = 100;
+   window.addEventListener('scroll',
+      function() {
+         if( window.pageYOffset > startShrink ) {
+             he.classList.remove( 'grow' );  
+             he.classList.add( 'shrink' );           
+          }
+         else {
+             he.classList.remove( 'shrink' );  
+             he.classList.add( 'grow' ); 
+          }
+       },false);
+ }());
+</script>
+</body>
 </html>
