--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,32 +1,75 @@
-body{
-	background-color: #000E21; 
-}
-section{
-  background-color: #000E21;
-  height: auto;
-}
-.container{
-  max-width: 1200px;
-  text-align: center;
-  margin: auto;
-}
 .uk-navbar-container:not(.uk-navbar-transparent) {
-    background: #00193B;
+    background-color: #000F30;
 }
 .uk-navbar-dropdown{
-	background: #00193B;
+  background-color: #000F30;
 }
 .uk-navbar-nav li a{
-	color: white;
-	font-size: 15px;
-	font-family: 'Rubik', sans-serif;
+  color: white;
+  font-size: 15px;
+  font-family: 'Open Sans Condensed', sans-serif;
+  letter-spacing: 2.5px;
 }
-.uk-dropdown-nav li a{
-	color: black;
+.uk-offcanvas-bar{
+  background-color: #000F30;
 }
-
-.uk-iconnav{
-	float: right;
-	font-size: 20px;
-	color: white;
+.uk-offcanvas-bar .uk-nav-header{
+  background-color: #000F30;
+}
+.uk-offcanvas-bar li a{
+  color: white;
+  font-size: 15px;
+  font-family: 'Open Sans Condensed', sans-serif;
+  letter-spacing: 1.5px;
+}
+a:link {
+  text-decoration: none;
+}
+a:visited {
+  text-decoration: none;
+  color: #64b5f6;
+}
+a {
+  text-decoration: none;
+  color:#64b5f6;
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+a:hover {
+  color: #64b5f6;
+  text-shadow:0px 0px 30px #90ABD3;
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+@media only screen and (max-width: 480px) {
+#desktop-nav{
+  display: none;
+}
+.fa-bars{
+  color: white;
+  font-size: 30px;
+  float: left;
+  padding-right: 10vh;
+}}
+@media only screen and (min-width: 480px) {
+#mobile-nav{
+  display: none;
+}}
+.social{
+  height: 10vh;
+}
+.social-icons{
+  text-align: center;
+  font-size: 35px;
+  word-spacing: 20px;
+}
+.social-icons a{
+  color: white;
+}
+.social-icons a:hover{
+  color: #64b5f6;
 }
