--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,3 @@
-
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -9,70 +7,105 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Digital Media</title>
   <link rel="icon" href="{% static 'img/logo.png' %}">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
   <link rel="stylesheet" href="{% static 'css/uikit.min.css' %}">
-  <link rel="stylesheet" href="{% static 'css/base.css' %}">
   <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
-  <link rel="stylesheet" href="{% static 'css/blog-card.css' %}">
-  <link rel="stylesheet" href="{% static 'css/blog-post.css' %}">
-
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
-  <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; bottom: #transparent-sticky-navbar">
+<div id="offcanvas-slide" uk-offcanvas>
+    <div class="uk-offcanvas-bar">    
+        <ul class="uk-nav uk-nav-default">
+            <li class="uk-nav-header">Transmedia 2020</li>
+            <li class="uk-nav-divider"></li>
+            <li><a href="{% url 'blog' %}">The Exhibtion</a></li>
+            <li><a href="#">Times</a></li>
+            <li><a href="#">Map</a></li>
+            <li><a href="#">About</a></li>
+            <li class="uk-nav-divider"></li>
+            <li><a href="{% url 'students' %}">Students</a></li>
+            <li><a href="{% url 'blog' %}">Yearbook</a></li>
+            <li><a href="{% url 'blog_list' %}">Blog</a></li>
+            <li class="uk-nav-divider"></li>
+            {% if user.is_authenticated %}
+            <li><a href="#">Hi {{ user.firstname }}</a></li>
+            <li><a href="{% url 'blog_new' %}">New Post</a></li>
+            <li><a href="{% url 'password_change' %}">Reset Password</a></li>
+            <li><a href="{% url 'logout' %}">Log Out</a></li></li>
+            {% else %}
+            <li><a href="{% url 'login' %}">Log In</a></li>
+            {% endif %}
+        </ul>    
+    </div>
+    </div>
+    <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; bottom: #transparent-sticky-navbar">
     <nav class="uk-navbar-container uk-margin" uk-navbar>
     <div class="uk-navbar-center">
     <div class="uk-navbar-center-left"><div>
         <ul class="uk-navbar-nav">
-          <li><a href="{% url 'blog' %}">Homepage</a></li>
+            <li><a id="mobile-nav" href="#offcanvas-slide" uk-toggle><i class="fas fa-bars"></i></a></li>
+        </ul>
+        <ul id="desktop-nav" class="uk-navbar-nav">
+          <li><a href="{% url 'blog' %}">The Exhibtion</a></li>
           <li><a href="{% url 'students' %}">Students</a></li>
-          <li><a href="{% url 'blog_list' %}">Blog</a></li>
+          <li><a href="#">Event Details</a>
+          <div class="uk-navbar-dropdown">
+          <ul class="uk-nav uk-navbar-dropdown-nav">
+              <li><a href="#">Times</a></li>
+              <li><a href="#">Map</a></li>
+              <li><a href="#">About</a></li></li>
+          </ul>
+          </div>
         </ul>
     </div>
     </div>
     <div>
-    <a class="uk-navbar-item uk-logo" href="{% url 'blog_list' %}">
-      <img src="{% static 'img/logo.png' %}" height="50" width="50">
+    <a class="uk-navbar-item uk-logo" href="{% url 'blog' %}">
+        <img src="{% static 'img/logo.png' %}" height="50" width="50">
     </a>
     <div class="uk-navbar-center-right"><div>
-        <ul class="uk-navbar-nav">
-          <li><a href="#">Yearbook</a></li>
-          <li><a href="#">Exhibition Info</a>
-        <div class="uk-navbar-dropdown">
-        <ul class="uk-nav uk-navbar-dropdown-nav">
-          <li><a href="#">Times</a></li>
-          <li><a href="#">Map</a></li>
-          <li><a href="#">About</a></li>
-        </ul>
-        </div>
+        <ul id="desktop-nav" class="uk-navbar-nav">
+        <li><a href="{% url 'blog' %}">Yearbook</a></li>
+        <li><a href="{% url 'blog_list' %}">Blog</a></li>
         {% if user.is_authenticated %}
-        <li><a href="#">{{ user.firstname }}</a>
+        <li><a href="#">Hi {{ user.firstname }}</a>
         <div class="uk-navbar-dropdown">
         <ul class="uk-nav uk-navbar-dropdown-nav">
-          <li><a href="{% url 'blog_new' %}">New Blog Post</a></li>
-          <li><a href="{% url 'password_change' %}">Change password</a></li>
-          <li><a href="{% url 'logout' %}">Log Out</a></li>
+            <li><a href="{% url 'blog_new' %}">New Post</a></li>
+            <li><a href="{% url 'password_change' %}">Reset Password</a></li>
+            <li><a href="{% url 'logout' %}">Log Out</a></li></li>
         </ul>
         </div>
         {% else %}
-        <li><a href="{% url 'signup' %}">Sign Up</a></li>
+        <li><a href="{% url 'login' %}">Log In</a></li>
         {% endif %}
-        </li>
         </ul>
-        </div>
+        </div> 
     </div>
     </nav>
-  </div>
-  <section>
-    <div class="container">
-    {% block content %}
-    {% endblock content %}
     </div>
-  </section>
-  <script src="{% static 'js/uikit.min.js' %}"></script>
-  <script src="{% static 'js/uikit-icons.min.js' %}"></script>
+<section class="page">
+<div class="container">
+{% block content %}
+{% endblock content %}
+</div>
+</section>
+<section class="social">
+    <div class="social-icons">
+      <br>
+        <a href="#" target="_blank"><i class="fab fa-facebook-square"></i></i></a>
+        <a href="#" target="_top"><i class="fas fa-envelope"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>       
+    </div>
+</section>
+<script src="{% static 'js/uikit.min.js' %}"></script>
+<script src="{% static 'js/uikit-icons.min.js' %}"></script>
 </body>
 </html>
