--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
   <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
   <link rel="stylesheet" href="{% static 'css/uikit.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
@@ -25,7 +26,7 @@
         <ul class="uk-nav uk-nav-default">
             <li class="uk-nav-header">Transmedia 2020</li>
             <li class="uk-nav-divider"></li>
-            <li><a href="{% url 'blog' %}">The Exhibtion</a></li>
+            <li><a href="">The Exhibtion</a></li>
             <li><a href="#">Times</a></li>
             <li><a href="#">Map</a></li>
             <li><a href="#">About</a></li>
@@ -35,7 +36,7 @@
             <li><a href="{% url 'blog_list' %}">Blog</a></li>
             <li class="uk-nav-divider"></li>
             {% if user.is_authenticated %}
-            <li><a href="#">Hi {{ user.firstname }}</a></li>
+            <li>Hi {{ user.firstname }}</li>
             <li><a href="{% url 'blog_new' %}">New Post</a></li>
             <li><a href="{% url 'password_change' %}">Reset Password</a></li>
             <li><a href="{% url 'logout' %}">Log Out</a></li></li>
@@ -53,16 +54,9 @@
             <li><a id="mobile-nav" href="#offcanvas-slide" uk-toggle><i class="fas fa-bars"></i></a></li>
         </ul>
         <ul id="desktop-nav" class="uk-navbar-nav">
-          <li><a href="{% url 'blog' %}">The Exhibtion</a></li>
-          <li><a href="{% url 'students' %}">Students</a></li>
-          <li><a href="#">Event Details</a>
+          <li><a href="{% url 'blog' %}">What We Do</a></li>
+          <li><a href="#">The Exhibition</a></li>
           <div class="uk-navbar-dropdown">
-          <ul class="uk-nav uk-navbar-dropdown-nav">
-              <li><a href="#">Times</a></li>
-              <li><a href="#">Map</a></li>
-              <li><a href="#">About</a></li></li>
-          </ul>
-          </div>
         </ul>
     </div>
     </div>
@@ -73,37 +67,32 @@
     <div class="uk-navbar-center-right"><div>
         <ul id="desktop-nav" class="uk-navbar-nav">
         <li><a href="{% url 'blog' %}">Yearbook</a></li>
-        <li><a href="{% url 'blog_list' %}">Blog</a></li>
-        {% if user.is_authenticated %}
-        <li><a href="#">Hi {{ user.firstname }}</a>
+        <li><a href="https://www.facebook.com/Transmedia2020-105715664374722/" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+        <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="#" target="_blank"><i class="fas fa-user-circle"></i></a>
         <div class="uk-navbar-dropdown">
         <ul class="uk-nav uk-navbar-dropdown-nav">
-            <li><a href="{% url 'blog_new' %}">New Post</a></li>
-            <li><a href="{% url 'password_change' %}">Reset Password</a></li>
-            <li><a href="{% url 'logout' %}">Log Out</a></li></li>
+          {% if user.is_authenticated %}
+          <li>Hi {{ user.firstname }}</li>
+          <br>
+          <li><a href="{% url 'blog_list' %}">Blog</a></li>
+          <li><a href="{% url 'blog_new' %}">New Post</a></li>
+          <li><a href="{% url 'password_change' %}">Reset Password</a></li>
+          <li><a href="{% url 'logout' %}">Log Out</a></li></li>
+          {% else %}
+          <li><a href="{% url 'blog_list' %}">Blog</a></li>
+          <li><a href="{% url 'login' %}">Log In</a></li>
+          {% endif %}
         </ul>
         </div>
-        {% else %}
-        <li><a href="{% url 'login' %}">Log In</a></li>
-        {% endif %}
-        </ul>
-        </div> 
     </div>
     </nav>
     </div>
 <section class="page">
-<div class="container">
+  <div class="container">
 {% block content %}
 {% endblock content %}
-</div>
-</section>
-<section class="social">
-    <div class="social-icons">
-      <br>
-        <a href="#" target="_blank"><i class="fab fa-facebook-square"></i></i></a>
-        <a href="#" target="_top"><i class="fas fa-envelope"></i></a>
-        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>       
-    </div>
+  </div>
 </section>
 <script src="{% static 'js/uikit.min.js' %}"></script>
 <script src="{% static 'js/uikit-icons.min.js' %}"></script>
