--- a/templates/blog_list.html
+++ b/templates/blog_list.html
@@ -1,9 +1,28 @@
 {% extends 'base.html' %}
-
 {% block title %}Blog{% endblock title %}
-
 {% block content %}
 {% for blog in object_list %}
+<style type="text/css">
+    .blog-list{
+        max-width: 1000px;
+        margin: auto;
+    }
+    .uk-card-title, .uk-text-meta{
+        text-align: left;
+        color: black;
+    }
+    time{
+        color: black;
+    }
+    .uk-button-text{
+        font-size: 20px;
+        color: black;
+    }
+    h1{
+        color: black;
+    }
+</style>
+<div class="blog-list">
     <div class="uk-padding-small">
     <div class="uk-card uk-card-default uk-width-1-1@m">
         <div class="uk-card-header">
@@ -24,12 +43,14 @@
             <div class="uk-card-body">
                 <h1 class="uk-heading-divider blog-title">
                 {{ blog.title }}</h1>
-                <a href="{% url 'blog_detail' blog.pk %}" class="uk-button uk-button-text">Read more</a>
+                <a href="{% url 'blog_detail' blog.pk %}" style="color: black;" class="uk-button uk-button-text">Read more</a>
             </div>
             <div class="uk-card-footer">
                 <p class="profile-info">Second Year | Developer</p>
         	</div>
     </div>
     </div>
+    <br>
+</div>
 {% endfor %}
 {% endblock content %}
