--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -1,17 +1,30 @@
 {% extends 'base.html' %}
-
 {% block title %}Students{% endblock title %}
-
 {% block content %}
-
-  {% for user in object_list %}
-
-    <div class="blog-entry">
-      <a href="{% url 'student_detail' user.pk %}"><div>
-        <span>{{ user.firstname }}</span>
-        <span>{{ user.lastname }}</span><br><br>
-      </div></a>
-    </div>
-    <br />
+<style type="text/css">
+	.students{
+		padding-top: 5vh;
+		max-width: 1500px;
+		text-align: center;
+		margin: auto;
+	}
+</style>
+<div class="students">
+<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
+    <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m">
+    {% for user in object_list %}
+        <li>
+            <img class="uk-padding-small" src="../../static/img/student.png" alt="">
+            <div class="uk-position-center uk-panel">
+            	<a href="{% url 'student_detail' user.pk %}">
+            		<h1 class="student-name">{{ user.firstname }}{{ user.lastname }}</h1>
+            	</a>
+            </div>
+        </li>
     {% endfor %}
+    </ul>
+    <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+    <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+</div>
+</div>    
 {% endblock content %}
